--- a/docs/多合约变量重复测试.md
+++ b/docs/多合约变量重复测试.md
@@ -1,9 +1,17 @@
-#### 关于数据源存储位置
+#### 部署diamond
 
-- 部署完合约A并加入diamond后，通过diamond调用A和直接调用A，变量值是不一样的，也就是说A加入diamond后，存储并非原来A的存储
+- npx hardhat --network match_test run scripts/deploy.js
+  - DiamondCutFacet deployed: 0xF4D0d8EC4dC81B6584775E730268e3cBb95EF52A
+    Diamond deployed: 0xDc8E90199C9947dFe12b68E90e77eF210e4fC645
+    DiamondInit deployed: 0x07Ea5988E3E1D54a8e72Ae90580967aB2bCe0251
 
-#### diamond将DiamondStorage数据存储在指定的存储位置，DiamondStorage的结构如下：
 
+
+
+#### 部署A
+- TestA deployed: 0x5D79C7481852F7A61BE3421b3AB3f985103024BD
+#### 部署B
+- 
 ``` shell
 # DiamondStorage 这个结构题的位置是固定的，里面的数据按照存储规则存储到相应的位置
 struct DiamondStorage {
@@ -53,7 +61,3 @@ cut.push({
 #### diamond上游合约的selector不能重复
 
 - diamond上游合约的selector不能重复，重复的话会影响访问
-
-#### 关于逻辑合约的变量
-
-- 多个逻辑合约中，公开变量的名称不能重复，否则CUT的时候会出现函数签名重复添加的错误。多个逻辑合约中，两个变量名重复的话，一个公开一个私有是可以的
